--- a/templates/blog/post-detail.html
+++ b/templates/blog/post-detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h2>{{ post.title }}</h2>
 {% row %}
-    <div class="col">
+    <div class="col">   
         {% include "blog/post-byline.html" %}
     </div>
 {% endrow %}
@@ -12,6 +12,14 @@
         {{ post.content|safe }}
     </div>
 {% endrow %}
+{% if post.author.profile %}
+    {% row %}
+        {% col %}
+            <h4>About the author</h4>
+            <p>{{ post.author.profile.bio }}</p>
+        {% endcol %}
+    {% endrow %}
+{% endif %}
 {% row %}
     {% include "blog/post-comments.html" %}
 {% endrow %}
